# vscode_gitex

./: .eslintrc.json  .gitignore  .vscodeignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
core/: Cargo.toml
core/src/: lib.rs
core/src/blame/: mod.rs  parser.rs  types.rs
core/src/filter/: date_filter.rs  mod.rs  regex_filter.rs
core/src/graph/: layout.rs  mod.rs  parser.rs  types.rs
core/tests/fixtures/: sample_blame.txt  sample_log.txt
src/: extension.ts
src/blame/: blameCommands.ts  blameDecorations.ts  blameHoverProvider.ts  blameService.ts  blameStatusBar.ts  blameUtils.ts
src/commit/: commitComparisonProvider.ts  commitDetailsProvider.ts  diffService.ts
src/common/: configuration.ts  outputChannel.ts  types.ts  validation.ts
src/git/: gitCommands.ts  gitParsers.ts  gitService.ts  gitUri.ts  gitWatcher.ts
src/graph/: graphCommands.ts  graphDataProvider.ts  graphMenus.ts  graphViewProvider.ts
src/wasm/: wasmBridge.ts  wasmLoader.ts
test/: tsconfig.json
test/fixtures/: gitOutputs.ts
test/helpers/: mockGitCommands.ts  mockGitService.ts  mockWebview.ts
test/suite/: blameService.test.ts  blameUtils.test.ts  configuration.test.ts  diffService.test.ts  gitCommands.test.ts  gitParsers.test.ts  gitParsersExtended.test.ts  gitUri.test.ts  graphDataProvider.test.ts  graphViewProvider.test.ts  index.ts  types.test.ts  validation.test.ts  wasmBridge.test.ts  wasmBridgeExtended.test.ts
webview/: tsconfig.json
webview/commitDetails/: index.html  index.ts
webview/graph/: canvasRenderer.ts  filterBar.ts  (+10 more)
(+3 files in other folders)
